--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -5,21 +5,21 @@ on:
     types: [published]
 
 jobs:
-  deploy:
+  Pypi-Publish:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python
+    - name: 安装 Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - name: Install dependencies
+    - name: 安装依赖
       run: |
         python -m pip install --upgrade pip
         pip install build
-    - name: Build package
+    - name: 构建 Python 包
       run: python -m build
-    - name: Publish package
+    - name: 发布 Python 包至 Pypi
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
         user: __token__
